# mc-velocity-installer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: README.md  coding_rules.md
src/: main.rs  version.rs
src/prompts/: input.rs  install_dir.rs  memory.rs  mod.rs  version.rs
src/setup/: bind.rs  common.rs  config_path.rs  force_key_authentication.rs  forced_hosts.rs  forwarding_mode.rs  forwarding_secret_file.rs  mod.rs  motd.rs  online_mode.rs  servers.rs  show_max_players.rs  summary.rs  try_order.rs
tests/: feature_cli.rs  install_flow.rs  setup_flow.rs
velocity/: forwarding.secret  start.bat  start.sh
velocity/plugins/bStats/: config.txt
