[package]
name = "mc-velocity-installer"
version = "0.2.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml_edit = "0.22"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.12"
